Fix a layout issue in the details pane on ownCloud
On ownCloud, the detail titles could wrap to multiple lines, breaking
the layout of the details pane quite badly on narrow windows. This
didn't happen on Nextcloud because there the core provides the style
property `white-space: no-wrap` for the <dt> elements.

--- a/css/public/app.css
+++ b/css/public/app.css
@@ -742,6 +742,7 @@ input.edit-list, input.new-list {
 	padding-top: 0;
 	padding-bottom: 6px;
 	padding-right: 12px;
+	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	text-align: right;
