--- a/css/style-sidebar.css
+++ b/css/style-sidebar.css
@@ -66,6 +66,7 @@
 	padding-top: 0;
 	padding-bottom: 6px;
 	padding-right: 12px;
+	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	text-align: right;
